# Gooey-Writer

./: .gitignore  MODULE.bazel  Package.resolved  Package.swift  README.md
Gooey Writer/: ContentView.swift  Writer.swift  authopenwrapper.mm  diskarbiter.swift  vm.swift
Gooey Writer.xcodeproj/: project.pbxproj
Gooey Writer.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Gooey Writer.xcodeproj/xcshareddata/xcschemes/: Gooey Writer.xcscheme
Gooey Writer.xcodeproj/xcuserdata/lbrabec.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Gooey Writer.xcodeproj/xcuserdata/lbrabec.xcuserdatad/xcschemes/: xcschememanagement.plist
Gooey-Writer/: BUILD  Config.swift  Gooey Writer-Bridging-Header.h  Gooey_WriterApp.swift  Info.plist  Writer.swift  authopenwrapper.h  util.swift
Gooey-Writer/Assets.xcassets/AppIcon.appiconset/: Contents.json
